[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["asynchronous", "embedded", "no-std"]
description = "Minimal non-blocking I/O layer"
keywords = ["await", "futures", "IO"]
license = "MIT OR Apache-2.0"
name = "nb"
repository = "https://github.com/japaric/nb"
version = "0.1.1"

[features]
unstable = []

[dev-dependencies]
futures = "0.1.17"
