[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["asynchronous", "embedded", "no-std"]
description = "Minimal non-blocking I/O layer"
keywords = ["await", "futures", "IO"]
license = "MIT OR Apache-2.0"
name = "nb"
repository = "https://github.com/rust-embedded/nb"
homepage = "https://github.com/rust-embedded/nb"
documentation = "https://docs.rs/nb"
readme = "README.md"
version = "1.0.0" # remember to update html_root_url
edition = "2018"
